[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythonprc"
version = "0.1.0"
description = "An easy-to-use wrapper for PRC's ER:LC server API!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9", "cryptography>=41.0"]
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["erlc", "prc", "roblox", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
nacl = ["PyNaCl>=1.5"]

[project.urls]
Homepage = "https://github.com/yourname/pythonprc"
"Bug Tracker" = "https://github.com/yourname/pythonprc/issues"
