[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
include = ["pythonprc/*"]

[project]
name = "pythonprc"
version = "1.0.0"
description = "An easy-to-use wrapper for PRC's ER:LC server API!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9", "cryptography>=41.0"]
license = { text = "GPL-3.0-only" }
authors = [{ name = "Jack Bacon", email = "jack@itoj.dev" }]
keywords = ["erlc", "prc", "roblox", "api", "wrapper"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
nacl = ["PyNaCl>=1.5"]

[project.urls]
"Homepage" = "https://git.itoj.dev/pythonprc"
"Bug Tracker" = "https://git.itoj.dev/pythonprc/issues"
